# whitebox-adversarial-toolbox

./: .gitignore  .python-version  .travis.yml  LICENSE  MANIFEST.in  README.md  make.py  pyproject.toml  requirements.txt  setup.py
.circleci/: config.yml
.github/workflows/: pdoc.yml  pytest.yml
docs/: .gitignore  CNAME  index.html  search.js  what.html
docs/images/: what.eps  what.psd  what_logo.psd
docs/v0.0.1/: index.html  search.js  what.html
docs/v0.0.1/what/: attacks.html  models.html  utils.html
docs/what/: _main.html  attacks.html  cli.html  examples.html  models.html  utils.html
docs/what/attacks/: detection.html
docs/what/examples/: faster_rcnn_demo.html  mobilenet_ssd_demo.html  yolov3_demo.html  yolov3_pcb_attack_demo.html  (+2 more)
examples/: .gitignore  faster_rcnn_demo.py  faster_rcnn_train.py  mobilenet_v1_ssd_demo.py  mobilenet_v1_ssd_train.py  mobilenet_v1_ssd_train_fast.py  mobilenet_v2_ssd_lite_demo.py  mobilenet_v2_ssd_lite_train.py  mobilenet_v2_ssd_lite_train_fast.py  yolov3_cbp_attack.py  yolov3_cbp_universal_attack.py  yolov3_demo.py  yolov3_pcb_attack.py  yolov3_pcb_attack_demo.py  yolov3_pcb_attack_measure.py  yolov3_pcb_universal_attack.py  yolov3_pcb_universal_measure.py  yolov3_tiny_demo.py  yolov3_tog_attack.py  yolov3_tog_attack_measure.py  yolov4_demo.py  yolov4_tiny_demo.py
examples/attack/: .gitignore  yolov3_attack_universal_video_evaluate.py  yolov3_pcb_attack.py  yolov3_pcb_attack_carla_test.py  yolov3_pcb_attack_carla_train.py  yolov3_pcb_attack_evaluation.py  yolov3_pcb_attack_image.py  yolov3_pcb_attack_image_test.py  yolov3_pcb_attack_measure.py  yolov3_pcb_attack_universal_video.py  yolov3_pcb_attack_universal_voc2012.py  yolov3_pcb_attack_video.py  yolov3_tog_attack.py  yolov3_tog_attack_evaluation.py  yolov3_tog_attack_image.py  yolov3_tog_attack_measure.py  yolov3_tog_attack_universal_video.py  yolov3_tog_attack_video.py
examples/inference/: faster_rcnn_demo.py  mobilenet_v1_ssd_demo.py  mobilenet_v2_ssd_lite_demo.py  yolov3_demo.py  yolov3_tiny_demo.py  yolov4_demo.py  yolov4_tiny_demo.py  yolox_demo.py
examples/train/: .gitignore  faster_rcnn_train.py  mobilenet_v1_ssd_train.py  mobilenet_v2_ssd_lite_train.py
notebooks/: .gitignore  MinM-Attack-Paper.ipynb  faster_rcnn_demo.ipynb  mobilenet_v1_ssd_demo.ipynb  mobilenet_v1_ssd_train.ipynb  mobilenet_v2_ssd_lite_demo.ipynb  mobilenet_v2_ssd_lite_train.ipynb
tests/: test_what.py
what/: __init__.py  __main__.py  _main.py
what/attacks/: __init__.py
what/cli/: __init__.py  attack.py  example.py  model.py
what/examples/: __init__.py  faster_rcnn_demo.py  mobilenet_ssd_demo.py  yolov3_demo.py  yolov3_pcb_attack_demo.py  yolov3_tog_attack_demo.py  yolov4_demo.py  yolox_demo.py
what/models/: __init__.py
what/utils/: __init__.py  file.py  logger.py  proj_lp.py  resize.py
(+128 files in other folders)
