[build-system]
requires = [
    "numpy>=1.18.0",
    "tqdm",
    "six",
    "setuptools",
    "torch",
    "torchvision",
    "opencv-python",
    "scikit-image",
    "tensorflow",
    "matplotlib",
    "click"
]
build-backend = "setuptools.build_meta"

[project]
name = "whitebox-adversarial-toolbox"
version = "0.1.0"
authors = [
  { name="wuhanstudio", email="wuhanstudios@gmail.com" },
]
maintainers = [
  { name="wuhanstudio", email="wuhanstudios@gmail.com" },
]
description = "WHite-box Adversarial Toolbox (WHAT) - Python Library for Deep Learning Security"
readme = "README.md"
license = {text = "MIT License"}
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=1.18.0",
    "tqdm",
    "six",
    "setuptools",
    "torch",
    "torchvision",
    "opencv-python",
    "scikit-image",
    "tensorflow",
    "matplotlib",
    "pandas",
    "click"
]

[project.scripts]
what = "what._main:main"

[project.urls]
"Homepage" = "https://github.com/wuhanstudio/whitebox-adversarial-toolbox"
"Bug Tracker" = "https://github.com/wuhanstudio/whitebox-adversarial-toolbox/issues"
