[build-system]
requires = [
    "numpy>=1.18.0",
    "tqdm",
    "six",
    "setuptools",
    "torch",
    "torchvision",
    "opencv-python",
    "scikit-image",
    "tensorflow",
    "matplotlib",
    "click",
    "progressbar",
]
build-backend = "setuptools.build_meta"

[project]
name = "whitebox-adversarial-toolbox"
version = "0.1.2"
authors = [
  { name="wuhanstudio", email="wuhanstudios@gmail.com" },
]
maintainers = [
  { name="wuhanstudio", email="wuhanstudios@gmail.com" },
]
description = "WHite-box Adversarial Toolbox (WHAT) - Python Library for Deep Learning Security"
readme = "README.md"
license = {text = "MIT License"}
requires-python = ">=3.6"
classifiers = [
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.18.0",
    "tqdm",
    "six",
    "setuptools",
    "torch",
    "torchvision",
    "opencv-python",
    "scikit-image",
    "tensorflow",
    "matplotlib",
    "pandas",
    "click",
    "progressbar",
]

[project.scripts]
what = "what._main:main"

[project.urls]
"Homepage" = "https://github.com/wuhanstudio/whitebox-adversarial-toolbox"
"Bug Tracker" = "https://github.com/wuhanstudio/whitebox-adversarial-toolbox/issues"
